--- a/app/components/list/list.component.html
+++ b/app/components/list/list.component.html
@@ -13,15 +13,10 @@
       <td>{{item.name}}</td>
       <td>{{item.id}}</td>
       <td>{{item.order}}</td>
+      <td>${{item.cost}}</td>
     </tr>
   </tbody>
-  <tfoot>
-    <tr>
-      <td>Total</td>
-      <td></td>
-      <td>Total</td>
-    </tr>
-  </tfoot>
+
 
 
 </table>
