--- a/src/app/components/add-order/add-order.component.html
+++ b/src/app/components/add-order/add-order.component.html
@@ -7,9 +7,9 @@
 
     <input type="text" placeholder="Nombre Cliente" name="name" class="form-control mt-3" [(ngModel)]="item.name">
 
-    <div *ngFor="let BUTTON of BUTTONS">
+    <div *ngFor="let BUTTON of BUTTONS; let i = index">
       <button class="mt-3" type="button" value="BUTTON.order"
-        (click)="clickedButton(BUTTON.order)">{{BUTTON.order}}</button>
+        (click)="clickedButton(BUTTON.order, BUTTON.cost)">{{BUTTON.order}}</button>
     </div>
 
     <button class="btn btn-warning mt-3 mb-3" type="submit">submit</button>
@@ -25,7 +25,7 @@
 
     <div *ngFor="let lBUTTON of lBUTTONS">
       <button class="mt-3" type="button" value="lBUTTON.order"
-        (click)="clickedButton(lBUTTON.order)">{{lBUTTON.order}}</button>
+        (click)="clickedButton(lBUTTON.order, lBUTTON.cost)">{{lBUTTON.order}}</button>
     </div>
 
     <button class="btn btn-warning mt-3 mb-3" type="submit">submit</button>
