--- a/src/app/components/list/list.component.html
+++ b/src/app/components/list/list.component.html
@@ -9,7 +9,7 @@
     </tr>
   </thead>
   <tbody>
-    <tr class="alert alert-warning" role="alert" *ngFor="let item of items">
+    <tr class="alert alert-success" role="alert" *ngFor="let item of items">
       <td>{{item.name}}</td>
       <td>{{item.id}}</td>
       <td>{{item.order}}</td>
